Fixed inputs jumping when an error is showed

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,3 +37,9 @@ button {
 .UserInfo {
   font-style: italic;
 }
+
+.field {
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
